finalized the presentation

--- a/css/theme/template/theme.scss
+++ b/css/theme/template/theme.scss
@@ -329,3 +329,14 @@
         background-color: var(--r-background-color);
     }
 }
+
+/*********************************************
+ * MANUALLY ADDED
+ *********************************************/
+.reveal .banner {
+	background: var(--r-link-color);
+	color: white;
+	border-radius: 20px;
+	display: inline-block;
+	padding: 15px;
+}
